compiler/testData/diagnostics/tests/Properties.jet
var x : Int = 1 + x
   get() : Int = 1
   set(<!REF_SETTER_PARAMETER!>ref<!> value : <!WRONG_SETTER_PARAMETER_TYPE!>Long<!>) {
      $x = value.int
      $x = <!TYPE_MISMATCH!>1.lng<!>
    }

 val xx : Int = <!PROPERTY_INITIALIZER_NO_BACKING_FIELD!>1 + x<!>
   get() : Int = 1
   <!VAL_WITH_SETTER!>set(value : Long) {}<!>

  val p : Int = <!PROPERTY_INITIALIZER_NO_BACKING_FIELD!>1<!>
    get() = 1

class Test() {
    var a : Int = 111
    var b : Int get() = $a; set(x) {a = x; $a = x}

   this(i : Int) : this() {
    <!NO_BACKING_FIELD_CUSTOM_ACCESSORS!>$b<!> = $a
    $a = <!NO_BACKING_FIELD_CUSTOM_ACCESSORS!>$b<!>
    a = <!NO_BACKING_FIELD_CUSTOM_ACCESSORS!>$b<!>
   }
   fun f() {
    <!NO_BACKING_FIELD_CUSTOM_ACCESSORS!>$b<!> = $a
    a = <!NO_BACKING_FIELD_CUSTOM_ACCESSORS!>$b<!>
   }
   public val <!PUBLIC_MEMBER_SHOULD_SPECIFY_TYPE!>i<!> = 1
}